cropping background image because of fade-out issue on mobile; changing float on pagination and sort for mobile

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -16,7 +16,7 @@
 }
 
 body {
-    background: url('../images/bg.jpg') no-repeat top center fixed;
+    background: url('../images/bg_small.jpg') no-repeat top center fixed;
     background-size: cover;
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: $base-font-size;
@@ -335,7 +335,7 @@ header {
         float: left;
     }
     
-    input[type=submit] {
+    button[type=submit] {
         width: 30%;
         float: left;
     }
