--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -2,6 +2,10 @@
     @import "screen";
 }
 
+@media screen and (max-width: 500px){
+    @import "mobile";
+}
+
 @media print {
     @import "print";
 }
